[package]
name = "redis-cluster-help"
version = "0.1.0"
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.16.0", features = [ "cluster"] }
